--- a/latest/rules-authoring/index.html
+++ b/latest/rules-authoring/index.html
@@ -4,13 +4,13 @@
   <meta charset="utf-8">
   <title>Redirecting</title>
   <noscript>
-    <meta http-equiv="refresh" content="1; url=../../v0.7.0-rc1/rules-authoring/" />
+    <meta http-equiv="refresh" content="1; url=../../v0.7.0/rules-authoring/" />
   </noscript>
   <script>
-    window.location.replace("../../v0.7.0-rc1/rules-authoring/" + window.location.hash);
+    window.location.replace("../../v0.7.0/rules-authoring/" + window.location.hash);
   </script>
 </head>
 <body>
-  Redirecting to <a href="../../v0.7.0-rc1/rules-authoring/">../../v0.7.0-rc1/rules-authoring/</a>...
+  Redirecting to <a href="../../v0.7.0/rules-authoring/">../../v0.7.0/rules-authoring/</a>...
 </body>
 </html>
