--- a/latest/install/kubernetes/index.html
+++ b/latest/install/kubernetes/index.html
@@ -4,13 +4,13 @@
   <meta charset="utf-8">
   <title>Redirecting</title>
   <noscript>
-    <meta http-equiv="refresh" content="1; url=../../../v0.7.0-rc1/install/kubernetes/" />
+    <meta http-equiv="refresh" content="1; url=../../../v0.8.0/install/kubernetes/" />
   </noscript>
   <script>
-    window.location.replace("../../../v0.7.0-rc1/install/kubernetes/" + window.location.hash);
+    window.location.replace("../../../v0.8.0/install/kubernetes/" + window.location.hash);
   </script>
 </head>
 <body>
-  Redirecting to <a href="../../../v0.7.0-rc1/install/kubernetes/">../../../v0.7.0-rc1/install/kubernetes/</a>...
+  Redirecting to <a href="../../../v0.8.0/install/kubernetes/">../../../v0.8.0/install/kubernetes/</a>...
 </body>
 </html>
